# OSymandias

./: .env.example  .gitignore  CHANGELOG.md  DOCS.md  DOCS_en.md  DOCS_pt-br.md  LICENSE  OSY.compose.yml  OSY.nginx.conf  README.md  README.pt-br.md  docker-compose.yml  osymandias.toml
backend/: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/aios/: config.py  main.py
backend/aios/agents/: base_agent.py  context_builder.py  registry.py
backend/aios/api/: deps.py
backend/aios/api/routers/: agents.py  events.py  jobs.py  memory.py  metrics.py  providers.py  tools.py
backend/aios/core/: event_emitter.py
backend/aios/db/: init_db.py  session.py  sync_session.py
backend/aios/llm/: client.py
backend/aios/memory/: embeddings.py  manager.py  qdrant_client.py
backend/aios/models/: __init__.py  agent_definition.py  agent_instance.py  event.py  job.py  memory_entry.py  message.py  task.py  tool_call.py  tool_definition.py
backend/aios/observability/: logging.py  tracing.py
backend/aios/tools/: executor.py  permissions.py  registry.py
backend/aios/tools/builtin/: memory_ops.py  read_url.py  send_message.py  web_search.py
backend/aios/workers/: agent_tasks.py  beat_tasks.py  celery_app.py  evaluator_tasks.py  scheduler_tasks.py  tool_tasks.py
backend/alembic/: env.py
backend/alembic/versions/: 0003_fix_embedding_vector.py  0007_add_input_schema_to_agent_definitions.py
backend/tests/: conftest.py
backend/tests/e2e/: test_job_lifecycle.py
backend/tests/integration/: test_api_jobs.py  test_api_tools.py
backend/tests/unit/: test_agent_normalization.py  test_config.py  test_parse_final_result.py  test_tools_builtin.py  test_webhook_validation.py
sdk/: README.md  pyproject.toml
sdk/osymandias/: __init__.py  assets.py  decorator.py  discovery.py  process.py  schema.py  tool_server.py
sdk/osymandias/adapters/: __init__.py  crewai.py  langchain.py  llamaindex.py  openai_agents.py  smolagents.py
sdk/osymandias/cli/: main.py
sdk/osymandias/runtime/: alembic.ini  config.py  context.py  main.py
sdk/osymandias/runtime/agents/: base_agent.py  context_builder.py  registry.py
sdk/osymandias/runtime/alembic/: env.py
sdk/osymandias/runtime/alembic/versions/: 0001_initial_schema.py  0002_drop_tool_calls_tool_name_fk.py  0004_tool_webhook_url.py  0005_fix_embedding_dim_768.py  0006_v1_agent_kind_callable_ref_parent_task.py  0008_add_framework_to_agent_definitions.py  0009_add_max_tokens_to_jobs.py  0010_add_estimated_cost_to_agent_instances.py  0011_add_webhook_subscriptions.py  0012_add_requires_approval_to_tasks.py  (+1 more)
sdk/osymandias/runtime/api/: deps.py
sdk/osymandias/runtime/api/routers/: agents.py  (+8 more)
sdk/osymandias/runtime/core/: event_emitter.py
sdk/osymandias/runtime/db/: init_db.py  session.py  sync_session.py
sdk/osymandias/runtime/llm/: client.py  cost_tracker.py
sdk/osymandias/runtime/memory/: embeddings.py  manager.py  qdrant_client.py  reranker.py
sdk/osymandias/runtime/models/: __init__.py  agent_definition.py  agent_instance.py  base.py  event.py  job.py  memory_entry.py  message.py  task.py  tool_call.py  tool_definition.py  webhook_subscription.py
sdk/osymandias/runtime/observability/: logging.py  tracing.py
sdk/osymandias/runtime/services/: metrics_service.py
sdk/osymandias/runtime/tools/: executor.py  permissions.py  registry.py
sdk/osymandias/runtime/workers/: agent_tasks.py  beat_tasks.py  celery_app.py  evaluator_tasks.py  scheduler_tasks.py  tool_tasks.py  webhook_tasks.py
sdk/tests/: test_decorator.py  test_discovery.py  test_schema.py
(+52 files in other folders)
