[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aios"
version = "0.1.0"
description = "AI Operating System — multi-agent runtime"
requires-python = ">=3.11"
dependencies = [
    # web
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",

    # database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",

    # cache + pub/sub
    "redis[hiredis]>=5.0.0",

    # task queue
    "celery[rabbitmq]>=5.3.0",
    "kombu>=5.3.0",

    # vector store
    "qdrant-client>=1.9.0",

    # LLM
    "litellm>=1.40.0",

    # validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",

    # observability
    "loguru>=0.7.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.45b0",
    "opentelemetry-instrumentation-celery>=0.45b0",

    # http client (tools)
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",

    # utilities
    "python-dotenv>=1.0.0",
    "tenacity>=8.3.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["aios"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
